--- a/css/index.css
+++ b/css/index.css
@@ -86,9 +86,6 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
-body {
-  font-size: 62.5%;
-}
 header {
   display: flex;
   justify-content: center;
@@ -106,11 +103,60 @@ header nav a {
   text-decoration: none;
   color: gray;
 }
-section .title-container {
-  display: flex;
-  justify-content: center;
+* {
+  box-sizing: border-box;
 }
-section .title-container h1 {
+body {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+}
+.title-container {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  background-image: url(../assets/home.png);
+  padding: 20%;
+  margin-bottom: 2.5%;
+}
+.title-container h1 {
+  margin: 0 auto;
+  font-size: 6rem;
+  color: white;
+  width: 75%;
+}
+.title-container button {
+  margin: 0 auto;
+  font-size: 3rem;
+}
+.artists-container {
+  display: flex;
+  width: 95%;
+  margin: 2.5% auto;
+}
+.artists-container .artist {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.artists-container .artist img {
+  width: 60%;
+  height: 50%;
+  border-radius: 10px;
+}
+.artists-container .artist a {
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  padding: 2%;
+}
+.artists-container .artist .bio {
+  width: 90%;
+  font-size: 1.2rem;
 }
