--- a/less/main.less
+++ b/less/main.less
@@ -1,14 +1,68 @@
-section {
+* {
+    box-sizing: border-box;
+}
 
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+}
 
-    .title-container {
+.title-container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        width: 100%;
+        text-align: center;
+        background-image: url(../assets/home.png);
+        padding: 20%;
+        margin-bottom: 2.5%;
 
+        
 
         h1 {
-            display: flex;
-            justify-content: center;
+            margin: 0 auto;
+            font-size: 6rem;
+            color: white;
+            width: 75%;
+        }
+
+        button {
+            margin: 0 auto;
+            font-size: 3rem;
+        }
+ }
+
+.artists-container {
+    display: flex;
+    width: 95%;
+    margin: 2.5% auto;
+
+    .artist {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+        img {
+            width: 60%;
+            height: 50%;
+            border-radius: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+            font-size: 2rem;
+            padding: 2%;
+        }
+
+        .bio {
+            width: 90%;
+            font-size: 1.2rem;
         }
     }
 }
