--- a/css/index.css
+++ b/css/index.css
@@ -109,8 +109,9 @@ header nav a {
 body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
 }
 .title-container {
@@ -143,6 +144,7 @@ body {
   width: 50%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 .artists-container .artist img {
