--- a/css/index.css
+++ b/css/index.css
@@ -95,13 +95,32 @@ header nav {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  header nav {
+    flex-direction: column;
+  }
+}
 header nav a {
   display: flex;
   justify-content: space-evenly;
   padding-right: 20px;
-  font-size: 2rem;
+  font-size: 3rem;
   text-decoration: none;
   color: gray;
+}
+@media (max-width: 500px) {
+  header nav a {
+    margin: 2.5% 0;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    background-color: lightblue;
+    padding: 5px 100px;
+  }
+}
+header nav a.home {
+  color: black;
+  font-weight: 600;
 }
 * {
   box-sizing: border-box;
@@ -114,6 +133,11 @@ body {
   width: 80%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  body {
+    width: 95%;
+  }
+}
 .title-container {
   display: flex;
   flex-direction: column;
@@ -125,32 +149,73 @@ body {
   padding: 20%;
   margin-bottom: 2.5%;
 }
+@media (max-width: 500px) {
+  .title-container {
+    padding: 15%;
+  }
+}
 .title-container h1 {
   margin: 0 auto;
   font-size: 6rem;
   color: white;
   width: 75%;
 }
+@media (max-width: 500px) {
+  .title-container h1 {
+    font-size: 4rem;
+    color: blue;
+    margin: 0;
+    width: 100%;
+  }
+}
 .title-container button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+  height: 50px;
   margin: 0 auto;
-  font-size: 3rem;
+  font-size: 1.6rem;
+  border-radius: 5px;
+  color: black;
+  background-color: white;
 }
 .artists-container {
   display: flex;
   width: 95%;
   margin: 2.5% auto;
 }
+@media (max-width: 500px) {
+  .artists-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .artists-container .artist {
   width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: default;
   align-items: center;
+}
+@media (max-width: 500px) {
+  .artists-container .artist {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
 .artists-container .artist img {
   width: 60%;
   height: 50%;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .artists-container .artist img {
+    width: 100%;
+  }
+}
+.artists-container .artist img:hover {
+  opacity: 80%;
 }
 .artists-container .artist a {
   text-decoration: none;
@@ -158,7 +223,18 @@ body {
   font-size: 2rem;
   padding: 2%;
 }
+@media (max-width: 500px) {
+  .artists-container .artist a {
+    text-align: center;
+    font-size: 2.5rem;
+  }
+}
 .artists-container .artist .bio {
   width: 90%;
   font-size: 1.2rem;
+}
+@media (max-width: 500px) {
+  .artists-container .artist .bio {
+    text-align: center;
+  }
 }
