--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,13 +6,31 @@ header {
         display: flex;
         justify-content: center;
 
+        @media @mobile {
+            flex-direction: column;
+        }
+
         a {
             display: flex;
             justify-content: space-evenly;
             padding-right: 20px;
-            font-size: 2rem;
+            font-size: 3rem;
             text-decoration: none;
             color: gray;
+
+            @media @mobile {
+                margin: 2.5% 0;
+                justify-content: center;
+                align-items: center;
+                border-radius: 15px;
+                background-color: lightblue;
+                padding: 5px 100px;
+            }
+
+            &.home {
+                color: black;
+                font-weight: 600;
+            }
         }
     }
 }
